<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsStand</string>
    
    <string name="menu_filters">Filters</string>
    <string name="menu_layers">Layers</string>
    <string name="menu_settings">Settings</string>
    
    <string name="home_content_description">Go to home location</string>
    <string name="local_content_description">Go to current location</string>
    <string name="world_content_description">Go to world view</string>
    <string name="locate_content_description">Search for and go to a location</string>
    
    <string name="topics_title">Topics</string>
    
    <string name="locate_hint">Search for a Location</string>
    
    <string name="connection_error">Connection Error</string>
    <string name="xml_error">XML Error</string>
	<string name="current_location">Current Location</string>
	
	<string name="all_sources_header">ALL SOURCES</string>
	<string name="language_sources_header">LANGUAGES</string>
	<string name="country_sources_header">COUNTRIES</string>
    <string name="feed_sources_header">FEEDS</string>
	
    <string name="edit_languages">Edit Languages</string>
    <string name="edit_countries">Edit Countries</string>
    <string name="edit_feeds">Edit Feeds</string>
    <string name="add_countries_constraint">Add Country Constraint</string>
    <string name="add_feeds_constraint">Add Feed Constraint</string>
    
    <string name="top_stories_topic_image">Topic Stories Topic</string>
    <string name="top_stories_title">Article Title</string>
    <string name="top_stories_time">7 minutes ago</string>
    <string name="top_stories_domain">google.com</string>
    <string name="top_stories_images_button">Story Images</string>
    <string name="top_stories_videos_button">Story Videos</string>
    <string name="top_stories_related_button">Related Stories</string>

    <string name="share">Share</string>
    <string name="moreInTopic">More in Topic</string>
    <string name="enlarge">Enlarge</string>
    <string name="source">Source Article</string>
    <string name="translate">Translate</string>

    <string name="video_preview_image">Video Preview Image</string>

    <!-- Image Viewer -->
    <!-- Activity titles -->
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
    <string name="menu_about">About</string>
    <string name="menu_top_stories">Top Stories</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_mode">Mode</string>
    <string name="menu_search_key">Keyword</string>
    <string name="development_string">Developed at the University of Maryland at College Park with partial support of the National Science Foundation
    </string>
    <string name="special_thanks">Special thanks to Jon Sperling and Roscoe \'Rocky\' Suddarth
    </string>
    <string name="newsstand_system">NewsStand System: Hanan Samet, Marco Adelfio, Brendan Fruin,
        Michael Lieberman, Daniele Panozzo, Jagan Sankaranarayanan, and Benjamin Teitler
    </string>
    <string name="designed_by">Designed by: Hanan Samet and Brendan Fruin</string>
    <string name="developed_by">Developed by: Brendan Fruin</string>
    <string name="world">World</string>
    <string name="locate">Locate</string>
    <string name="local">Local</string>
    <string name="home">Home</string>
    <string name="keen_project_id">527d224800111c7583000003</string>
    <string name="keen_write_key">5cf7064dd87c2e77f88885dae5879b2cf87fac2f4a22971e7045c55a539024d4a293a7990639b8d9083204f0533508f92149ce0363f49797ad07f038ea3a919ec0dbd4f5cbe0e465cdad3f25069bbdc3170b33ac1ec373662a6dbd5e7cbdf8742939e0b51a1e3b4b6c105cf6c615b3f8</string>
    <string name="keen_read_key">f18ec03667eb4bd375dd3826fb3d7149dcb1c72a691c5c204bd6a8c5db4fb16f083acfeda840a54f29b893092c7a4976fcf97f7e95b2023350237e58d154fd24700f678424390d247a03fca0d9535ca46f2f039c1c532acf4a81080b1f05836df1b9426434bf263365b1d857ad3557dc</string>
   </resources>