<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="4dip"
              android:paddingLeft="5dip">

<TextView
    android:id="@+id/aboutDialogVersion"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:textSize="18sp"
    android:text="Version 1.0."
    android:textColor="#000000"
    android:paddingBottom="5dip" />

<TextView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:gravity="left"
    android:text="@string/development_string"
    android:textSize="15sp"
    android:paddingBottom="5dip"/>

<TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="left"
        android:textColor="#888888"
        android:text="@string/developed_by" />

<TextView
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:gravity="left"
       android:textColor="#888888"
       android:text="@string/designed_by" />

<TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="left"
        android:textColor="#888888"
        android:text="@string/newsstand_system"
        android:paddingBottom="3dip"/>

<TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="left"
        android:text="@string/special_thanks"
        android:textColor="#888888"/>


</LinearLayout>