<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical"
                android:paddingLeft="8dip"
                android:paddingRight="8dip"
                android:paddingTop="8dip"
                android:paddingBottom="5dip">

    <LinearLayout
        android:id="@+id/topStoriesFirstRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/topStoriesTopicImage"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:contentDescription="@string/top_stories_topic_image"
            android:maxHeight="25sp"
            android:minHeight="25sp"
            android:src="@drawable/marker_general"/>

        <TextView
            android:id="@+id/topStoriesTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:paddingLeft="3dip"
            android:text="@string/top_stories_title"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:background="?android:attr/selectableItemBackground"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topStoriesTimeDomainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topStoriesFirstRow"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topStoriesTimeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_stories_time"
            android:textColor="?android:attr/textColorSecondaryInverse"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/topStoriesDomainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_stories_domain"
            android:textColor="@color/dark_green"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/topStoriesImageButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/topStoriesFirstRow"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/topStoriesImagesButton"
            android:layout_width="wrap_content"
            android:layout_height="32sp"
            android:paddingLeft="5sp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/top_stories_images_button"
            android:src="@drawable/item_images"/>

        <ImageButton
            android:id="@+id/topStoriesVideosButton"
            android:layout_width="wrap_content"
            android:layout_height="32sp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/top_stories_videos_button"
            android:paddingLeft="5sp"
            android:src="@drawable/item_videos"/>

        <ImageButton
            android:id="@+id/topStoriesRelatedButton"
            android:layout_width="wrap_content"
            android:layout_height="32sp"
            android:paddingLeft="5sp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/top_stories_related_button"
            android:maxHeight="25dip"
            android:minWidth="26sp"
            android:src="@drawable/item_related"/>
    </LinearLayout>

    <TextView
        android:id="@+id/topStoriesDescriptionText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5sp"
        android:layout_below="@id/topStoriesImageButtons"
        android:textIsSelectable="false"
        android:maxLines="3"
        android:lines="3"/>


</RelativeLayout>