<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="right">

    <LinearLayout
        android:id="@+id/homeLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        style="?android:attr/actionButtonStyle"
        android:paddingLeft="-5dip"
        android:paddingRight="-5dip"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/homeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_content_description"
            android:src="@drawable/ic_action_home"
            android:paddingTop="3dip"
            />
        <TextView
            android:id="@+id/homeTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/white"
            android:layout_marginTop="-5dip"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/localLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        style="?android:attr/actionButtonStyle"
        android:paddingLeft="-5dip"
        android:paddingRight="-5dip"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/localImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_content_description"
            android:src="@drawable/action_compass_holo_dark"
            android:paddingTop="3dip"
            />
        <TextView
            android:id="@+id/localTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:textColor="@color/white"
            android:layout_marginTop="-5dip"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_gravity="center_vertical"
        >

        <TextView
            android:id="@+id/mapModeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dip"
            android:textStyle="bold"
            android:text="NewsStand"
            />

        <SeekBar
            android:id="@+id/mapSeekBar"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:progress="50"
            android:max="100"
            android:minHeight="10dip"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:saveEnabled="true"
            android:thumb="@layout/seek_thumb"
            android:progressDrawable="@layout/seek_bar"
            android:layout_width="155dip"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/worldLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        style="?android:attr/actionButtonStyle"
        android:paddingLeft="-5dip"
        android:paddingRight="-5dip"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/worldImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/world_content_description"
            android:src="@drawable/action_world_holo_dark"
            android:paddingTop="3dip"
            />
        <TextView
            android:id="@+id/worldTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/world"
            android:textColor="@color/white"
            android:layout_marginTop="-5dip"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/locateLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        style="?android:attr/actionButtonStyle"
        android:paddingLeft="-5dip"
        android:paddingRight="-5dip"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/locateImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_content_description"
            android:src="@drawable/action_search_world_holo_dark"
            android:paddingTop="3dip"
            />
        <TextView
            android:id="@+id/locateTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/locate"
            android:textColor="@color/white"
            android:layout_marginTop="-5dip"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
</LinearLayout>